# naijacare_v05

./: .gitignore  CHANGELOG.md  LICENSE  README.md  codex_corroboration.py  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_problem_context.md  02_architecture.md  03_workflow_walkthrough.md  04_risk_legitimacy_memo.md  05_pause_decision_log.md  07_application_alignment.md  07_reflection_and_alignment.md
legal/blockers/: 2025-09-01_in_person_exam_requirement.md  2025-09-08_meta_europe_data_storage.md  2025-09-10_ai_liability_assessment.md  2025-09-14_medical_malpractice_exposure.md
project_management/: pause_decision_log.md
prototype/: cli.py
prototype/fixtures/: sample_messages.jsonl
prototype/router/: app.py
prototype/web/: app.py
prototype/web/static/: for_reviewers.txt
prototype/web/templates/: index.html
src/naijacare/: __init__.py  audit.py  consent.py  models.py  privacy.py  routing.py
src/naijacare/consent/: __init__.py  audit.py  tracker.py  validator.py  withdrawal.py
src/naijacare/models/: __init__.py  database.py  pydantic.py
src/naijacare/models/orm/: __init__.py  case.py  consent.py  field_note.py  mixins.py  patient.py  routing_decision.py  stakeholder_feedback.py  user.py
tests/: conftest.py  test_consent_validator.py  test_routing.py
