[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "naijacare-prototype"
version = "0.6.0"
description = "WhatsApp-first telehealth routing prototype for low-bandwidth settings (prototype only; not for clinical use)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Bashir Bello"}]
dependencies = [
  "pydantic>=2.0",
  "flask>=3.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","B","UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
